# YTTL-TUI

./: ARCHITECTURE.md  CMakeLists.txt  MANIFEST.in  README.md  package.json  pyproject.toml
.github/workflows/: wheels.yml
.kiro/specs/caption-download-fix/: design.md  requirements.md  tasks.md
.kiro/specs/codebase-modernization/: design.md  requirements.md  tasks.md
.kiro/specs/performance-optimization/: design.md  requirements.md  tasks.md
.kiro/specs/readme-file-cleanup-docs/: design.md  requirements.md  tasks.md
.kiro/specs/transcript-display/: design.md  requirements.md  tasks.md
.kiro/specs/youtube-playlist-support/: design.md  requirements.md  tasks.md
ext-installer/: install.py  yttl.json
extension/: manifest.json
yttl/: __init__.py  __main__.py  chatgpt.py  cli.py  extension.py  huggingchat.py  libnative.dylib  performance.py  template.html  yttl.py
yttl_mcp/: IMPLEMENTATION_COMPLETE.md  README.md  STATUS.md  USAGE.md  __init__.py  __main__.py  claude_desktop_server.py  clean_mcp_server.py  configure_claude.py  debug_server.py  final_clean_test.py  final_test.py  final_test_manual.py  final_validation.py  install.sh  manual_mcp_server.py  minimal_server.py  requirements.txt  server.py  setup.py  simple_test_server.py  test_mcp_direct.py  test_server.py  update_config.py  validate_setup.py  working_server.py
yttl_mcp/server_impl/: __init__.py  exceptions.py  resources.py  server.py  tools.py  video_parser.py
